<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/Average_Water_Intake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"
        android:text="Back"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/activateNotificationSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:text="@string/notifications"
        android:textSize="26sp"
        android:textStyle="bold"
        android:thumb="@drawable/customswitchselector"
        android:track="@drawable/custom_track"
        app:layout_constraintBottom_toTopOf="@+id/spinnerIntroDropDown"
        app:layout_constraintEnd_toEndOf="@+id/slideViewPager"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/readNameEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:hint="@string/name_Input"
        android:inputType="text"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerIntroDropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/activityLevels"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="50dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/readNameEditText"
        app:layout_constraintEnd_toEndOf="@+id/readNameEditText"
        app:layout_constraintStart_toStartOf="@+id/readNameEditText" />

    <EditText
        android:id="@+id/readWeightEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:hint="Enter Weight"
        android:inputType="number"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/readNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"
        android:text="Next"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/dotIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/nextButton">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>